--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 JWT_SECRET=yourSecretKeyHere
 MONGO_URI = mongodb://localhost:27017/memory-match-game
+MONGO_URI = mongodb://localhost:27017/commonUserDB
